# llm-pe

./: .gitignore  Entailement Tests Anton.ipynb  Entailement Tests.ipynb  LLM Tests.ipynb  Parameter Writer.ipynb  README.md  aspect_testing.ipynb  comparisons.ipynb  david_plots.ipynb  david_plots_annotated.ipynb  dialogue_sim.py  environment.yml  eval_all.ipynb  eval_manager.py  eval_map.json  experiment_manager.py  item.py  lowercase_map.py  movie_lens_tools.ipynb  plotting.ipynb  prefloop.py  pyproject.toml  recipe_mpr_tools.ipynb  requirements.txt  slurm_script.sh  slurm_script10.sh  slurm_script11.sh  slurm_script12.sh  slurm_script2.sh  slurm_script3.sh  slurm_script4.sh  slurm_script5.sh  slurm_script6.sh  slurm_script7.sh  slurm_script8.sh  slurm_script9.sh  table_movies.txt  table_recipes.txt  table_restaurants.txt  temp_table.html  (+3 more)
configs/: aspect_value_movies_config.yaml  david_aspect_movies_config.yaml  david_base_config.yaml  david_rest_config.yaml  mini_movies_config.yaml  mini_movies_config_noise.yaml  mini_movies_mono_config.yaml  mini_recipes_config.yaml  mini_recipes_config_noise.yaml  mini_recipes_mono_config.yaml  mini_restaurants_config.yaml  mini_restaurants_mono_config.yaml  mini_yelp_cat_att_config.yaml  mini_yelp_cat_att_mono_config.yaml  movies_1000_users_10_config.yaml  movies_1000_users_5_config.yaml  movies_100_config.yaml  movies_100_mono_config.yaml  movies_100_users_100_config.yaml  movies_100_users_100_mono_config.yaml  movies_100_users_100_no_history_config.yaml  movies_10_users_10_config.yaml  movies_10_users_10_mono_config.yaml  (+33 more)
(+44913 files in other folders)
