[project]
name = "llm-pe"
version = "0.1.0"
readme = "README.md"
requires-python = ">=3.9.18"
dependencies = [
    "google-genai>=1.45.0",
    "google-generativeai>=0.8.5",
    "jinja2>=3.1.6",
    "matplotlib>=3.9.4",
    "numpy>=2.0.2",
    "openai>=2.6.0",
    "pandas>=2.3.3",
    "python-dotenv[cli]>=1.1.1",
    "pytrec-eval-terrier>=0.5.10",
    "sentence-transformers>=5.1.1",
    "torch>=2.8.0",
    "transformers>=4.57.1",
]

[dependency-groups]
dev = [
    "ipykernel>=6.31.0",
]
